using UnityEngine;

public class Constants : MonoBehaviour
{
    public const string AnimRunningParam = "Running";
    public const string AnimAttackParam = "Attacking";
    public const string AnimDeathParam = "Dead";

    public const string LayerEnvironment = "Environment";
    public const string LayerBarricade = "Barricade";
    public const string LayerUnitCollisionBlocker = "Unit_Collision_Blocker";
}